2004-04-12  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-04-10  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-21  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/testing.h (USE_PRINT_DRIVERS): Use plain printing by default

	* src/modules/Makefile.am: Switched to Plain printing interface

	* src/modules/plain-pdf.c
	(sp_plain_pdf_begin, sp_plain_pdf_bind, sp_plain_pdf_fill):
	Improved a little

2004-02-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.c (sp_item_set): Parse visibility
	(sp_item_invoke_show): Use visibility

	* src/sp-item.h: Added visibility

	* src/attributes.h: Added sodipodi:invisible

	* src/widgets/tree-store.h: New file

	* src/widgets/tree-store.c: New file

	* src/dialogs/document-tree.h: New file

	* src/dialogs/document-tree.c: New file

2004-02-29  Michael Schumacher <schumaml@cvs.gnome.org>

	* autogen.sh: addedd check for automake-1.8

	* configure.in: switched mingw build from 
	console to windows application (-mwindows in LDFLAGS)
	honor ACLOCAL_FLAGS environment variable
        	
2004-02-21  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/widgets/sp-dock*: New dockable UI come from libegg

	* src/widgets/Makefile.am: Support for dock

2004-02-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/desktop.c (sp_desktop_set_base): New method

	* src/sp-item.h: Moved view into NRArenaItems, saved pointer per view

	* src/display/nr-arena-item.c (nr_arena_item_view_new_prepend):
	New method, ported over from SPItem
	(nr_arena_item_view_list_remove): Ditto

	* src/display/nr-arena-item.h: Added NRArenaItemView

	* src/dialogs/xml-tree.c (on_desktop_shutdown): Return TRUE

	* src/sp-item.c (sp_item_get_viewport): Implement properly,
	also signature change for ::get_viewport

	* src/sp-item-transform.c (sp_desktop_set_i2d_transform_f): Apply
	extra transformation if parent has one

	* src/sp-item-group.c (sp_vpgroup_init): Set relevant flags
