@@ -1,3 +1,11 @@
+2004-06-01  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/widgets/tree-store.c: Include root into tree
+
+	* src/dialogs/document-tree.c (sp_document_tree_selection_changed): New handler,
+	change active layer according to selection (needs some thought)
+	(sp_document_tree_new): Bind selection
+
 2004-04-12  Gareth Owen  <gowen72@yahoo.com>
 
 	* configure.in: Added en_GB to ALL_LINGUAS
